--- a/posts/fatorial-zero.qmd
+++ b/posts/fatorial-zero.qmd
@@ -1,172 +1,443 @@
 ---
-title: 'Por que \( 0! = 1 \)?'
-author: 'Apresentação adaptada de slides em LaTeX Beamer'
+title: 'Por que 0! = 1?'
+author: 'Celso Marcellini -- Apresentação adaptada de slides em LaTeX Beamer'
 format: html
 ---
 
-# Por que \( 0! = 1 \)?
+# Por que 0! = 1?
 
-Nesta publicação exploramos **10 justificativas distintas** para o valor de \( 0! \). Cada seção abaixo foi adaptada de uma apresentação original em LaTeX Beamer e mantém o espírito didático com fórmulas matemáticas e exemplos.
+Nesta publicação exploramos **10 justificativas distintas** para o valor de $0!$. Cada seção abaixo foi adaptada de uma apresentação original em LaTeX Beamer e mantém o espírito didático com fórmulas matemáticas e exemplos.
 
 ---
 
-## 1. Interpretação Combinatória
+## 🧠 Forma 1: Interpretação Combinatória
 
-O fatorial \( n! \) representa o número de maneiras de organizar \( n \) elementos distintos.
+O fatorial $n!$ representa o número de maneiras de organizar $n$ elementos distintos.
 
-- Para \( n = 3 \): \( 3! = 6 \)
-- Para \( n = 2 \): \( 2! = 2 \)
-- Para \( n = 1 \): \( 1! = 1 \)
-- Para \( n = 0 \): **Quantas permutações do conjunto vazio?**
+- Para $n = 3$: $3! = 6$ permutações  
+- Para $n = 2$: $2! = 2$ permutações  
+- Para $n = 1$: $1! = 1$ permutação  
+- Para $n = 0$: **Quantas permutações do conjunto vazio?**
 
-\[
+$$
 \text{Resposta: } \boxed{1 \text{ permutação (o conjunto vazio em si)}} \Rightarrow \boxed{0! = 1}
-\]
-
-### Ilustração
-
-![](../images/figura1.png)
-
----
-
-## 2. Definição Recursiva
-
-Usamos a definição:
-
-$$
-n! = n \cdot (n - 1)!
-$$
-
-Para manter essa relação para \( n = 1 \), precisamos que:
-
-$$
-1! = 1 \cdot 0! \Rightarrow 0! = 1
 $$
 
 ---
 
-## 3. Coeficiente Binomial
+## 🌳 Ilustração: Interpretação Combinatória
 
-No binômio de Newton temos:
+::: {.columns}
+::: {.column width="60%"}
+
+O fatorial $n!$ representa o número de permutações de $n$ elementos.
+
+**Exemplo: permutações de $\{a, b\}$**
+
+$$
+\begin{aligned}
+2! &= 2: \{a,b\}, \{b,a\} \\\\
+1! &= 1: \{a\} \\\\
+0! &= 1: \{\,\} \text{ (conjunto vazio)}
+\end{aligned}
+$$
+
+:::
+
+::: {.column width="40%"}
+![](../images/figura1.png){width=50% fig-align="center"}
+
+*Representação visual das permutações*
+:::
+:::
+
+---
+
+**Conclusão:** Há exatamente $\boxed{1}$ forma de organizar zero elementos.
+
+$$
+\boxed{0! = 1}
+$$
+
+---
+
+## 🔁 Forma 2: Definição Recursiva
+
+A função fatorial é definida recursivamente:
+
+$$
+n! = n \cdot (n - 1)!, \quad \text{com } 1! = 1
+$$
+
+Aplicando a definição para $n = 1$:
+
+$$
+1! = 1 \cdot 0! \Rightarrow 1 = 1 \cdot 0! \Rightarrow \boxed{0! = 1}
+$$
+
+Essa definição é essencial para que a função fatorial seja válida a partir de $n = 1$ em diante.
+
+---
+
+## 🌳 Ilustração: Definição Recursiva
+
+![](../images/figura2.png){width=50% fig-align="center"}
+
+---
+
+- $3! = 3 \cdot 2!$
+- $2! = 2 \cdot 1!$
+- $1! = 1 \cdot 0! \Rightarrow 0! = 1$
+
+<div style="text-align:center; margin-top: 1rem;">
+$\boxed{0! = 1}$ é necessário para que a recursão “termine” corretamente.
+</div>
+
+---
+
+## 🔢 Forma 3: Coeficiente Binomial
+
+Usamos a fórmula do coeficiente binomial:
 
 $$
 \binom{n}{k} = \frac{n!}{k!(n-k)!}
 $$
 
-Ao substituir \( n = 0 \), \( k = 0 \):
+Caso especial:
 
 $$
-\binom{0}{0} = \frac{0!}{0! \cdot 0!} = 1 \Rightarrow 0! = 1
+\binom{0}{0} = \frac{0!}{0! \cdot 0!}
+\Rightarrow 1 = \frac{0!}{(0!)^2}
+\Rightarrow (0!)^2 = 0!
+\Rightarrow \boxed{0! = 1}
+$$
+
+Isso garante que as fórmulas da análise combinatória continuem válidas para $n = 0$.
+
+---
+
+## 🧩 Ilustração: Coeficiente Binomial
+
+
+![](../images/figura3.png){width=30% fig-align="center"}
+
+*Há exatamente uma maneira de escolher 0 elementos do conjunto vazio.*
+
+---
+
+## 🧬 Forma 4: Função Gama
+
+A função gama é uma generalização do fatorial para números reais e complexos:
+
+$$
+\Gamma(n) = \int_0^{\infty} x^{n-1} e^{-x} \, dx, \quad \text{para } n > 0
+$$
+
+Ela satisfaz a relação:
+
+$$
+\Gamma(n+1) = n! \quad \text{quando } n \in \mathbb{N}
+$$
+
+Portanto:
+
+$$
+0! = \Gamma(1) = \int_0^{\infty} e^{-x} \, dx = \left[ -e^{-x} \right]_0^{\infty} = 0 - (-1) = 1
+$$
+
+<div style="text-align:center; margin-top: 1rem;">
+<em>Assim, a definição de $0! = 1$ é coerente com a função gama.</em>
+</div>
+
+---
+
+## 🧠 Demonstração de $\Gamma(n+1) = n!$
+
+**1. Definição da função gama:**
+
+$$
+\Gamma(x) = \int_0^{\infty} t^{x-1} e^{-t} \, dt
+$$
+
+**2. Propriedade fundamental:**
+
+$$
+\Gamma(x+1) = x \cdot \Gamma(x)
+$$
+
+**3. Base da indução:**  
+$\Gamma(1) = \int_0^{\infty} e^{-t} \, dt = 1 = 0!$
+
+**4. Passo indutivo:**  
+Suponha que $\Gamma(k+1) = k!$. Então:
+
+$$
+\Gamma(k+2) = (k+1) \cdot \Gamma(k+1) = (k+1) \cdot k! = (k+1)!
 $$
 
 ---
 
-## 4. Função Gama
-
-A função fatorial se estende com a Função Gama:
+**Conclusão:**
 
 $$
-n! = \Gamma(n + 1)
-$$
-
-Como \( \Gamma(1) = 1 \), então:
-
-$$
-0! = 1
+\boxed{\Gamma(n+1) = n! \quad \text{para todo } n \in \mathbb{N}}
 $$
 
 ---
 
-## 5. Limite da Função Gama
+## 📐 Prova da Propriedade $\Gamma(x+1) = x \cdot \Gamma(x)$
 
-Também podemos justificar via limite:
-
-$$
-\Gamma(x) = \int_0^\infty t^{x-1} e^{-t} dt
-$$
-
-E como:
+**Objetivo:** Mostrar que
 
 $$
-\lim_{x \to 1} \Gamma(x) = 1 \Rightarrow 0! = 1
+\Gamma(x+1) = x \cdot \Gamma(x)
+$$
+
+**Definição da função gama:**
+
+$$
+\Gamma(x+1) = \int_0^{\infty} t^x e^{-t} \, dt
+$$
+
+**Fórmula da integração por partes:**
+
+$$
+\int u \, dv = uv - \int v \, du
+$$
+
+Aplicando integração por partes:
+
+- Seja $u = t^x \Rightarrow du = x t^{x-1} \, dt$
+- Seja $dv = e^{-t} \, dt \Rightarrow v = -e^{-t}$
+
+---
+
+**Aplicando a fórmula:**
+
+$$
+\Gamma(x+1) = -t^x e^{-t} \Big|_0^\infty + \int_0^{\infty} x t^{x-1} e^{-t} \, dt
+$$
+
+**Analisando o primeiro termo:**
+
+$$
+\lim_{t \to \infty} t^x e^{-t} = 0, \quad \lim_{t \to 0^+} t^x e^{-t} = 0 \quad \text{(para $x > 0$)}
+$$
+
+Logo:
+
+$$
+-t^x e^{-t} \Big|_0^\infty = 0
+$$
+
+**Portanto:**
+
+$$
+\Gamma(x+1) = x \int_0^\infty t^{x-1} e^{-t} \, dt = x \cdot \Gamma(x)
 $$
 
 ---
 
-## 6. Produto Vazio
+<div style="text-align:center; margin-top:1rem;">
+<em>Assim, a relação é válida para todo $x > 0$.</em>
+</div>
 
-Por definição, o produto de nenhum número (produto vazio) é 1:
+---
+
+## 🔎 Justificativa dos Limites
+
+Para aplicar a integração por partes, mostramos que:
 
 $$
-\prod_{k=1}^0 k = 1
+\lim_{t \to \infty} t^x e^{-t} = 0 \quad \text{e} \quad \lim_{t \to 0^+} t^x e^{-t} = 0 \quad (x > 0)
 $$
 
 ---
 
-## 7. Permutação \( P(n,n) \)
-
-A permutação de \( n \) elementos tomados \( n \) a \( n \):
+**1. Quando** $t \to \infty$:
 
 $$
-P(n, n) = \frac{n!}{(n - n)!} = \frac{n!}{0!}
+\frac{t^x}{e^t} \to 0 \quad \text{pois a exponencial domina qualquer potência}
 $$
 
-Para que a fórmula funcione com \( n = 0 \), precisamos de \( 0! = 1 \).
-
----
-
-## 8. Série de Taylor de \( e^x \)
-
-A expansão de Taylor:
+Portanto:
 
 $$
-e^x = \sum_{n=0}^{\infty} \frac{x^n}{n!}
-$$
-
-Para \( n = 0 \), o termo é \( \frac{x^0}{0!} = \frac{1}{0!} \). Como sabemos que o termo inicial é 1:
-
-$$
-0! = 1
+\boxed{\lim_{t \to \infty} t^x e^{-t} = 0}
 $$
 
 ---
 
-## 9. Logaritmo do Fatorial
-
-Usando a identidade:
+**2. Quando** $t \to 0^+$:
 
 $$
-\ln(n!) = \sum_{k=1}^n \ln(k)
+t^x \to 0, \quad e^{-t} \to 1 \quad \Rightarrow \quad t^x e^{-t} \to 0 \cdot 1 = 0
 $$
 
-Para \( n = 0 \), temos soma vazia:
+Portanto:
 
 $$
-\ln(0!) = 0 \Rightarrow 0! = e^0 = 1
+\boxed{\lim_{t \to 0^+} t^x e^{-t} = 0}
 $$
 
 ---
 
-## 10. Definições Computacionais
-
-Muitos algoritmos de programação definem:
-
-```python
-def fatorial(n):
-    if n == 0:
-        return 1
-    else:
-        return n * fatorial(n - 1)
-```
-
-Para que a recursão funcione corretamente, define-se \( 0! = 1 \) como base.
+<div style="text-align:center; margin-top: 1rem;">
+<em>Ambos os limites garantem que o termo de fronteira da integração por partes se anula.</em>
+</div>
 
 ---
 
-## Conclusão
+## 📊 Visualização dos Limites com Gráficos
 
-As dez abordagens acima justificam logicamente e matematicamente que:
+![](../images/figura4.png){width=100% fig-align="center"}
+
+*Comportamento da função $t^x e^{-t}$ para $t \to 0^+$ e $t \to \infty$.*
+
+---
+
+## 📈 Gráfico da Função Gama
+
+![](../images/figura5.png){width=80% fig-align="center"}
+
+*O gráfico mostra que $\Gamma(x)$ é contínua e satisfaz $\Gamma(1) = 1$, logo $0! = 1$.*
+
+---
+
+## 🧮 Função Gama — Ilustração Gráfica
+
+![](../images/figura6.png){width=80% fig-align="center"}
+
+*O gráfico destaca que $\Gamma(1) = 1$, o que justifica que $0! = 1$.*
+
+---
+
+## 🧩 Forma 5: Limite da Função Gama
+
+A função Gama estende o fatorial para além dos inteiros positivos. Podemos definir:
+
+$$
+0! = \lim_{x \to 0^+} \Gamma(x + 1) = \Gamma(1) = 1
+$$
+
+*Justificativa via continuidade da extensão analítica da função fatorial.*
+
+---
+
+## ✴️ Forma 6: Produto Vazio e Definição com Produtório
+
+A definição geral do fatorial como produto:
+
+$$
+n! = \prod_{k=1}^{n} k
+$$
+
+Aplicando essa definição para $n = 0$:
+
+$$
+0! = \prod_{k=1}^{0} k = 1
+$$
+
+*Na álgebra, o produto sobre um conjunto vazio é igual a 1, pois 1 é o elemento neutro da multiplicação.*
+
+---
+
+## 🔄 Forma 7: Permutação $P(0,0)$
+
+A fórmula geral das permutações é:
+
+$$
+P(n, r) = \frac{n!}{(n - r)!}
+$$
+
+Aplicando com $n = 0$ e $r = 0$:
+
+$$
+P(0, 0) = \frac{0!}{0!} = 1
+$$
+
+*Para que o número de permutações de $0$ elementos seja $1$, é necessário que $0! = 1$.*
+
+---
+
+## 🔢 Forma 8: Série de Taylor de $e^x$
+
+A função exponencial possui a seguinte expansão em série de Taylor:
+
+$$
+e^x = \sum_{n=0}^\infty \frac{x^n}{n!}
+$$
+
+O termo constante da série é:
+
+$$
+\frac{1}{0!}
+$$
+
+Sabemos que:
+
+$$
+e^0 = 1 \quad \Rightarrow \quad \frac{1}{0!} = 1 \quad \Rightarrow \boxed{0! = 1}
+$$
+
+---
+
+## 🧮 Forma 9: Logaritmo do Fatorial
+
+Uma identidade conhecida relaciona o fatorial com logaritmos:
+
+$$
+\log(n!) = \sum_{k=1}^{n} \log(k)
+$$
+
+Aplicando com \( n = 0 \):
+
+$$
+\log(0!) = \sum_{k=1}^{0} \log(k) = 0 \quad \Rightarrow \quad \boxed{0! = 1}
+$$
+
+*A soma vazia retorna zero, preservando a coerência da propriedade do logaritmo.*
+
+---
+
+## 💻 Forma 10: Sistemas Computacionais
+
+A definição $0! = 1$ é adotada universalmente em linguagens e softwares computacionais:
+
+- `Python:` `math.factorial(0)` retorna `1`
+- `R:` `factorial(0)` retorna `1`
+- `Julia:` `gamma(1)` retorna `1`
+- `Mathematica:` `Factorial[0]` retorna `1`
+
+\vspace{1ex}
+
+Todos seguem a convenção matemática padrão:
 
 $$
 \boxed{0! = 1}
 $$
+
+---
+
+## 🧠 Conclusão
+
+Cada abordagem nos leva ao mesmo resultado:
+
+$$
+\boxed{0! = 1}
+$$
+
+Essa igualdade é coerente com:
+
+- a lógica combinatória,  
+- a definição recursiva,  
+- as fórmulas algébricas dos binomiais,  
+- a generalização via função gama,  
+- a continuidade da função gama,  
+- a definição de produto vazio,  
+- a coerência com permutações $P(n,n)$,  
+- a validade da série de Taylor de $e^x$,  
+- a definição de logaritmo do fatorial,  
+- e a implementação computacional.
+
+> **Uma definição bem escolhida é uma ponte entre ideias.**
