--- a/sobre.qmd
+++ b/sobre.qmd
@@ -1,3 +1,3 @@
 # Sobre
 
-Meu nome é Celso Marcellini, e este blog nasceu do desejo de explorar matemática, LaTeX e computação de forma acessível e visual.
+Meu nome é Celso Marcellini, sou bacharel em matemática, e este blog nasceu do desejo de explorar matemática, estatística, física, LaTeX e programação de forma acessível e visual.
