Atualiza conteúdo do blog em 2025-06-22_05-12-42

--- a/posts/fisica/relatividade-especial-academico.qmd
+++ b/posts/fisica/relatividade-especial-academico.qmd
@@ -11,6 +11,7 @@ execute:
   message: false
   engine: knitr
 ---
+# A Teoria da Relatividade Especial -- Uma Visão Mais Acadêmica
 
 ## 1. Introdução Histórica
 
