Atualiza conteúdo do blog em 2025-06-23_06-10-15

--- a/ebook/fisica_estatico/relatividade-especial-academico-estatico.qmd
+++ b/ebook/fisica_estatico/relatividade-especial-academico-estatico.qmd
@@ -11,7 +11,10 @@ execute:
   message: false
   engine: knitr
 ---
+
+<div class="invisivel">
 # A Teoria da Relatividade Especial -- Uma Visão Mais Acadêmica
+</div>
 
 ## 1. Introdução Histórica
 
