--- a/posts/fisica/relatividade-especial-academico.qmd
+++ b/posts/fisica/relatividade-especial-academico.qmd
@@ -11,7 +11,10 @@ execute:
   message: false
   engine: knitr
 ---
+
+<div class="invisivel">
 # A Teoria da Relatividade Especial -- Uma Visão Mais Acadêmica
+</div>
 
 ## 1. Introdução Histórica
 
