--- a/posts/fisica/relatividade-especial.qmd
+++ b/posts/fisica/relatividade-especial.qmd
@@ -10,7 +10,10 @@ execute:
   warning: false
   message: false
 ---
+
+<div class="invisivel">
 # Relatividade Especial: Einstein, o Tempo e a Velocidade da Luz
+</div>
 
 ## 🌟 O que foi o ano milagroso de Einstein?
 
