--- a/posts/matematica/fatorial-zero.qmd
+++ b/posts/matematica/fatorial-zero.qmd
@@ -3,7 +3,7 @@ title: 'Por que 0! = 1?'
 author: 'Celso Marcellini -- Apresentação adaptada de slides em LaTeX Beamer'
 format: html
 categories: [matemática, fatorial, função gama]
-date: 2025-06-17
+date: 2025-06-22
 ---
 
 <div class="invisivel">
@@ -448,12 +448,9 @@ Essa igualdade é coerente com:
 
 ---
 
-## 📬 Entre em Contato
+## 🔗 Links Úteis
 
-Se você tiver dúvidas, sugestões ou quiser conversar sobre o tema, entre em contato por e-mail:
-
-👉 [**prof.marcellini@gmail.com**](mailto:prof.marcellini@gmail.com)
-
-Você também pode visitar meu repositório principal no GitHub:
-
-💻 [**github.com/marcellini-celso**](https://github.com/marcellini-celso)
+- 🧮 [Todos os Posts sobre Matemática](../../posts/matematica/)
+- 🧑‍🏫 [Sobre o Blog](../../posts/pessoal/sobre-o-blog.html)
+- 💻 [Repositório no GitHub](https://github.com/marcellini-celso/blog-marcellini)
+- 📬 [Contato por E-mail](mailto:prof.marcellini@gmail.com)
