--- a/posts/pessoal/sobre-o-blog.qmd
+++ b/posts/pessoal/sobre-o-blog.qmd
@@ -40,12 +40,9 @@ Compartilhar ideias e explicações matemáticas com visual limpo e acessível, 
 
 ---
 
-## 📬 Entre em Contato
+## 🔗 Links Úteis
 
-Se você tiver dúvidas, sugestões ou quiser conversar sobre o tema, entre em contato por e-mail:
-
-👉 [**prof.marcellini@gmail.com**](mailto:prof.marcellini@gmail.com)
-
-Você também pode visitar meu repositório principal no GitHub:
-
-💻 [**github.com/marcellini-celso**](https://github.com/marcellini-celso)
+- 🧮 [Todos os Posts sobre Matemática](../../posts/matematica/)
+- 🧑‍🏫 [Sobre o Blog](../../posts/pessoal/sobre-o-blog.html)
+- 💻 [Repositório no GitHub](https://github.com/marcellini-celso/blog-marcellini)
+- 📬 [Contato por E-mail](mailto:prof.marcellini@gmail.com)
