--- a/posts/programacao/exemplo.qmd
+++ b/posts/programacao/exemplo.qmd
@@ -1,7 +1,7 @@
 ---
 title: "Estilo Visual Personalizado"
 format: html
-categories: [programação, quarto, latex, python]
+categories: [programação, quarto, latex, python, R]
 date: 2025-06-17
 ---
 <div class="invisivel">
@@ -29,7 +29,6 @@ def fatorial(n):
 
 ## 🔗 Links Úteis
 
-- 🧮 [Todos os Posts sobre Matemática](../../posts/matematica/)
 - 🧑‍🏫 [Sobre o Blog](../../posts/pessoal/sobre-o-blog.html)
 - 💻 [Repositório no GitHub](https://github.com/marcellini-celso/blog-marcellini)
 - 📬 [Contato por E-mail](mailto:prof.marcellini@gmail.com)
