--- a/posts/matematica/fatorial-zero.qmd
+++ b/posts/matematica/fatorial-zero.qmd
@@ -1,9 +1,21 @@
 ---
-title: 'Por que 0! = 1?'
+title: "Por que 0! = 1?"
+description: "Exploramos **10 justificativas distintas** para o valor de $0!$."
 author: 'Celso Marcellini -- Apresentação adaptada de slides em LaTeX Beamer'
-format: html
-categories: [matemática, fatorial, função gama]
 date: 2025-06-22
+lang: pt-BR
+format:
+  html:
+    toc: true
+    toc-depth: 2
+    number-sections: false
+categories: [matemática, fatorial, função gama]
+tags: [matemática, fatorial, função gama, série de Taylor]
+execute:
+  echo: false
+  warning: false
+  message: false
+  eval: false  # ← desativa execução de blocos mesmo se existirem
 ---
 
 <div class="invisivel">
